system/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authelia-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - "prometheus.monitoring.lavrov.nl"
        - "grafana.monitoring.lavrov.nl"
      secretName: ingress-tls
  rules:
    - host: "grafana.monitoring.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: "prometheus.monitoring.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 8080
